# tmpc

./: .gitignore  .gitmodules  .project  CMakeLists.txt  CompilerOptions.cmake  MotionPlatform.hpp  MotionPlatformX.cpp  MotionPlatformX.hpp  README.md  Rosenbrock.nb  Test.m  controller.cpp  controller_1d.cpp  controller_wrapper.cpp  failed_qp_hpmpc.c  failed_qp_hpmpc.m  ip_qp.m  make_mex.m  mpipm.m  newton2.m  plant.cpp  plant_output.cpp  qp_extract_axis.m  qp_prepare_quadprog.m  rtmc.slx  rtmc_cms.slx  test_condensing.nb
bench/: Benchmark.hpp  BlasfeoMathBench.cpp  CMakeLists.txt  CasadiMathBench.cpp  ClassicalRiccatiBench.cpp  Complexity.hpp  CondensingBench.cpp  FactorizedRiccatiBench.cpp  FactorizedRiccatiStaticBench.cpp  HpipmRiccatiBench.cpp  MathBench.cpp  MpipmRiccatiBench.cpp  OcpGraphBench.cpp  OcpTreeBench.cpp  RiccatiBench.cpp  RiccatiBench.hpp  StaticFactorizedRiccatiBench.cpp  analyze_bench_riccati.m  bench_riccati.sh  casadi_math_bench.py
bench/blas/: CMakeLists.txt  Gemm.cpp  Potrf.cpp
bench/blasfeo/: CMakeLists.txt  Gemm.cpp  GemmNoWrapper.cpp  Makefile  Potrf.cpp  SyrkPotrf.cpp  SyrkPotrfBench.cpp  Trmm.cpp
bench/casadi/: CMakeLists.txt  Gemm.cpp  generated_gemm.py
bench/math/: Cholesky.cpp  Column.cpp  Gemm.cpp  GemmSubmatrix.cpp  LowerMatrixScalarMultiply.cpp  SqrNorm.cpp  Syrk.cpp  SyrkPotrf.cpp  Trmm.cpp  Trmv.cpp  Trsv.cpp  ZeroMatrixAssign.cpp
bench/qp/: DynamicClassicalRiccatiBench.cpp  DynamicFactorizedRiccatiBench.cpp  DynamicRiccatiBench.hpp  StaticClassicalRiccatiBench.cpp  StaticFactorizedRiccatiBench.cpp
bench/qp-hpipm/: CMakeLists.txt  HpipmRiccatiBench.cpp  Riccati.cpp
bench/results/: bench-riccati-intel_haswell-blas.json  bench-riccati-intel_haswell-openblas.json  math_bench-generic-gcc.json  math_bench-native-gcc.json
examples/: CMakeLists.txt
examples/ad/: ad_benchmark.cpp  ad_example.cpp
examples/casadi/: CMakeLists.txt  generated_function.cpp  generated_function_parallel.cpp  sample_functions.py
examples/json/: CMakeLists.txt  json_qp.cpp
examples/nlp/: CMakeLists.txt  sqp_rosenbrock.cpp
examples/numeric/: CMakeLists.txt  newton_solver.cpp
examples/qp/: CMakeLists.txt  create_qp.cpp  ocp_qp.cpp  ocp_size.cpp  ocp_tree.cpp  soft_constraints.cpp  solve_qp.cpp  tree_qp.cpp
src/: CMS_output_jacobian.cpp  CMakeLists.txt  CableRobotOCP.cpp  CasADiGeneratedFunction.cpp  CompilerOptions.cmake  CondensingSolver.cpp  CyberMotion.cpp  CyberMotion1D.cpp  CyberMotionOCP.cpp  MPC_Controller.cpp  ModelPredictiveController.cpp  MotionCueingController.cpp  MotionPlatformModelPredictiveController.cpp  MotionPlatformX.cpp  MultiStageQP.cpp  MultiStageQPSize.cpp  cablerobot_generated.c  cablerobot_ode.c  cablerobot_output.c  condensing_test.cpp  mpc_test.cpp  perftest.cpp  qpOASESProgram.cpp
src/blasfeo/: Blasfeo.cpp  CMakeLists.txt  blasfeo.cpp
src/casadi/: CMakeLists.txt  GeneratedFunction.cpp
src/casadi_interface/: CasADiGeneratedFunction.cpp  GeneratedFunction.cpp
src/cms/: CyberMotionOCP.cpp  cybermotion_generated.h
src/hpipm/: CMakeLists.txt  Tree.cpp
src/json/: CMakeLists.txt
src/mpc/: MpcOcpSize.cpp  MpcQpSize.cpp
src/ocp/: DynamicOcpSize.cpp  OcpGraph.cpp  OcpSize.cpp  OcpSizeGraph.cpp  OcpTree.cpp
src/print/: Exception.cpp
src/qp/: Condensing.cpp  CondensingSolver.cpp  HPMPCProblem.cpp  HPMPCProblemExport.cpp  HPMPCProblemExport.hpp  HPMPCSolver.cpp  HpipmWorkspace.cpp  HpmpcWorkspace.cpp  MultiStageQPSize.cpp  QpOasesProblem.cpp  QpOasesSolution.cpp  QpOasesSolver.cpp  QpOasesWorkspace.cpp  QpSize.cpp  qpOASESProgram.cpp
src/qp-hpipm/: CMakeLists.txt
src/qp-hpmpc/: CMakeLists.txt  HpmpcWorkspace.cpp
src/qp-qpoases/: QpOasesWorkspace.cpp
src/qp-treeqp/: CMakeLists.txt  DualNewtonTreeWorkspace.cpp
src/qpoases/: CMakeLists.txt
src/qptool/: CMakeLists.txt  qptool.cpp
src/rti/: RealtimeIteration.cpp
src/tools/: CMakeLists.txt  qptool.cpp
src/treeqp/: CMakeLists.txt  DualNewtonTreeWorkspace.cpp
test/: CMakeLists.txt  ElementGroupTest.cpp  Kernels.hpp  QpOasesWorkspaceTest.cpp  QpWorkspaceSolveTest.cpp  QpWorkspaceTest.cpp  RealtimeIterationTest.cpp  TestMatrix.cpp  cablerobot_generated_test.cpp  casadi_function_test.cpp  casadi_function_test_generate_code.py  condensing_test.cpp  cybermotion_generated_test.cpp  cybermotion_ocp_test.cpp  eigen_print_wrap.hpp  gtest_tools_eigen.hpp  hpmpc_test.cpp  mhe_test.cpp  mpc_test.cpp  pendulum_ode_generated.c  pendulum_ode_generated.h  perftest.cpp  qp_solver_test.cpp  qp_test.cpp  qp_test_problems.hpp  qpoases_problem_test.cpp  realtime_iteration_test.cpp  rk4_test.cpp  rk4_test_generate_data.py  test_condensing.nb
test/blasfeo/: BlasfeoTest.cpp  CMakeLists.txt  CustomMatrixTest.cpp  DynamicMatrixTest.cpp  GemmTest.cpp  PotrfTest.cpp  SyrkPotrfTest.cpp
test/casadi/: CMakeLists.txt  CompressedColumnStorageTest.cpp  GeneratedFunctionTest.cpp  SparsityTest.cpp  casadi_function_test.cpp
test/casadi_interface/: CMakeLists.txt  CompressedColumnStorageTest.cpp  GeneratedFunctionTest.cpp  casadi_function_test.cpp  test_functions.py
test/estimation/: KalmanFilterTest.cpp
test/hpipm/: CMakeLists.txt  ConvertTreeOcpQpTest.cpp  NominalSolverTest.cpp  SolveUnconstrainedTest.hpp  TreeSolverTest.cpp  TreeTest.cpp
test/hpmpc/: CMakeLists.txt  HpmpcWorkspaceTest.cpp
test/integrator/: BackwardEulerTest.cpp  CMakeLists.txt  DecayTest.hpp  ErkDecayTest.cpp  ErkMassSpringDamperTest.cpp  ExplicitRungeKutta4Test.cpp  ImplicitRungeKuttaTest.cpp  IrkDecayTest.cpp  IrkMassSpringDamperTest.cpp  IrkPendulumTest.cpp  IrkSimpleDaeTest.cpp  IrkSimpleLinearOdeTest.cpp  IrkSimpleTimeDependentOdeTest.cpp  IrkTest.cpp  IrkTestParam.hpp  MassSpringDamperTest.hpp  MultiStepIntegratorTest.cpp  PendulumData.cpp  PendulumData.hpp  PendulumOde.hpp  PendulumOdeTest.cpp  PendulumTest.cpp  dae.nb  ode.nb  rk4_test_generate_data.py
test/json/: CMakeLists.txt  JsonQpTest.cpp
test/lti/: DareTest.cpp  LtiContinuousToDiscreteTest.cpp
test/math/: ExpmTest.cpp  GgesTest.cpp  LlhTest.cpp  RankTest.cpp  SyrkPotrfTest.cpp  TrsvTest.cpp
test/matrix/: BlockMatrixViewTest.cpp  (+8 more)
(+509 files in other folders)
